Добавлен фрагмент с картами(есть проблема в том что гугл карты не могут храниться в контейнере с обычным фрагментом)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
 
     <integer name="com_vk_sdk_AppId">7010939</integer>
     <string name="missing"><u>Пропустить</u></string>
+    <string name="GoogleAPIkey">AIzaSyDy9fUZvRKuz-Xv6zCq_56mhMUu6Uk_mMc</string>
+
 </resources>
